...
        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />

        <LinearLayout
            android:id="@+id/informationsProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextFirstName"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/editTextLastName"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/editTextAllergie"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/allergies"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextGout"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/aliments_proscrire"
                android:inputType="textMultiLine" />
        </LinearLayout>
...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/email_create_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
...
            android:visibility="gone"
            android:weightSum="2.0">


            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonSave"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/save_and_continue" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/sign_out_button"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/verify_email_button"
                android:layout_width="1dp"
...
